# unolock-agent-mcp

./: .gitignore  README.md  openclaw.plugin.json  package.json  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  host-config.md  install.md  macos.md  mcporter.md  release.md  support-matrix.md  supported-environments.md  sync-design.md  testing-with-local-safe.md  tool-catalog.md  write-support-design.md
examples/: claude-desktop-config.json  cursor-mcp.json  mcporter.json  openclaw-mcp.json  openclaw-plugin-config.json  unolock-agent-config.json
openclaw-plugin/: openclaw.plugin.json
openclaw-plugin/skills/unolock-agent-access/: SKILL.md
scripts/: README.md  bootstrap.sh  build_binary.py  probe_local_server.py  pyinstaller_runtime_hook.py  run_local_e2e_readonly.sh  run_local_probe.sh  run_stdio_mcp.sh
skills/unolock-agent-access/: SKILL.md
skills/unolock-agent-access/agents/: openai.yaml
src/: README.md
src/unolock_mcp/: README.md  __init__.py  __main__.py  cli.py  config.py  host.py  runtime.py  update.py
src/unolock_mcp/api/: __init__.py  client.py  files.py  records.py
src/unolock_mcp/auth/: __init__.py  agent_auth.py  flow_client.py  local_probe.py  registration_store.py  session_store.py
src/unolock_mcp/crypto/: __init__.py  callback_crypto.py  pq.py  safe_keyring.py
src/unolock_mcp/domain/: __init__.py  models.py
src/unolock_mcp/mcp/: __init__.py  server.py
src/unolock_mcp/sync/: __init__.py  config_note.py  engine.py  events.py  reconciler.py  runtime_store.py  service.py
src/unolock_mcp/tpm/: __init__.py  base.py  factory.py  host_diagnostics.py  linux_tpm.py  macos_keychain.py  macos_secure_enclave.py  test_tpm.py  (+2 more)
tests/: README.md  test_build_binary.py  test_claude_plugin.py  test_config.py  test_host_diagnostics.py  test_macos_keychain.py  test_macos_secure_enclave.py  test_openclaw_plugin.py  test_registration_store.py  test_runtime.py  test_sync_config_note.py  test_sync_events.py  test_sync_service.py  test_test_tpm.py  test_tpm_factory.py  test_update.py  test_windows_cng.py  test_windows_tpm.py
tests/integration/: live_local_readonly_flow.py
tests/unit/: test_agent_auth.py  test_api_client.py  test_callback_codec.py  test_cli.py  test_files.py  test_flow_client.py  test_host.py  test_http_client.py  test_local_probe.py  test_mcp_server.py  test_readonly_records.py  test_safe_keyring.py
tests/wrapper/: unolock-agent-wrapper.test.js
(+3 files in other folders)
