[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unolock-agent"
version = "0.1.40"
description = "Official UnoLock MCP for AI agents with TPM-backed authentication and zero-knowledge Safe access"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
keywords = ["mcp", "unolock", "ai-agent", "security", "tpm", "webauthn", "zero-knowledge"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=3.4.8",
  "aws-encryption-sdk>=3.3.0",
  "certifi>=2024.8.30",
  "liboqs-python>=0.14.1,<0.15",
  "mcp>=1.26.0,<2",
]

[project.urls]
Homepage = "https://unolock.ai"
Repository = "https://github.com/TechSologic/unolock-agent"
Documentation = "https://github.com/TechSologic/unolock-agent/tree/main/docs"
Issues = "https://github.com/TechSologic/unolock-agent/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pyinstaller>=6.10.0",
  "twine>=6.1.0",
]

[project.scripts]
unolock-agent = "unolock_mcp.cli:mcp_main"
unolock-agent-probe = "unolock_mcp.cli:probe_main"
unolock-agent-tpm-check = "unolock_mcp.cli:tpm_check_main"
unolock-agent-self-test = "unolock_mcp.cli:self_test_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
